Fri Jun  6 05:05:18 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.cpp:
        
          Fixed formatting issues.

Fri Jun  6 04:11:24 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/cuts.java.jbi.client.build:
        * cuts/java/jbi/client/JbiClient.java:
        * cuts/java/jbi/client/JbiClientApp.java:
        * cuts/java/jbi/client/JbiClientAppShutdownThread.java:
        * cuts/java/jbi/client/JbiSink.java:

          Re-designed the JbiClient architecture so that the deployment
          and configuration implementation is decoupled from the actual
          business-logic of the client. Now, a client application built
          on top of the spring framework is responsible for hosting
          and configuring the JBI client via XML documents.

          Eventually, we will be implementing a DAnCE like framework for
          deploying many JBI clients. For now, the client application
          can be used for manaully deploying a component.

Wed Jun  4 18:01:32 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/cuts.java.jbi.client.build:

          . Added missing .class file to the .jar file.

Wed Jun  4 17:49:02 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/cuts.java.build:
        * cuts/cuts.java.jbi.client.build:

          . Enabled runtime debug information.

        * cuts/java/jbi/client/JbiClient.java:

          . Implemented a shutdown hook for the client. It is invoked
            whenever the client application exits, if it runs in
            standalone mode.

Wed Jun  4 15:13:55 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/config/jni.mpb:

          . Removed the inputext keyword from the custom define
            specification.

Wed Jun  4 15:10:50 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/CUTS.mpc:
        * cuts/cuts_java_Logger.h: