@@ -1,7 +1,15 @@
+Fri Jun  6 19:44:05 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.h:
+        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.cpp:
+
+          Enabled the generation of setter/getter methods for 
+          attributes defined on a component.
+          
 Fri Jun  6 05:05:18 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.cpp:
-        
+
           Fixed formatting issues.
 
 Fri Jun  6 04:11:24 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
